--- a/styles/style.css
+++ b/styles/style.css
@@ -13,13 +13,266 @@
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
-  /* выше установили ограничения для секции */
+  display: flex;
+  position: relative;
+  background-color: #f2f2f2;
+
+}
+
+.logo_place_header{
+  position: absolute;
+  top: 30px;
+  left: 64px;
+  z-index: 2;
+}
+
+.header__title{
+  width: 730px;
+  align-self: center;
+  margin: 0;
+  margin-left: 64px;
+  line-height: 96px;
+  font-size: 102px;
+  font-weight: 600;
+  z-index: 2;
+}
+
+.header__subtitle{
+  width: 388px;
+  position: absolute;
+  bottom: 30px;
+  left: 64px;
+  margin: 0;
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: normal;
+  z-index: 2;
+
+}
+
+.header__link{
+  text-decoration: none;
+  color: #2f80ed;
+}
+
+.header__main-illustration{
+  max-width: 765px;
+  min-height: 600px;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  z-index: 1;
 }
 
 /* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
 .header__square-pic {
   height: 568px;
   width: 568px;
+  background-color: #2f80ed;
+  position: absolute;
+  top: 64px;
+  right: 0;
+  z-index: 0;
+
+}
+
+.description{
+  display: flex;
+  justify-content: center;
+}
+
+.two-columns{
+  width: 80%;
+  display: flex;
+  justify-content: space-between;
+  margin: 100px 0;
+  list-style: none;
+
+}
+
+.two-columns__brief{
+  color: #2f80ed;
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+  width: 175px;
+  margin: 0;
+}
+
+.two-columns__main-text{
+  width: 80%;
+  min-width: 784px;
+}
+
+.two-columns__paragraph{
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+  margin: 0;
+
+}
+
+.two-columns__span-accent{
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: 600;
+}
+
+.two-columns__paragraph_margin{
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+.digits{
+  display: flex;
+  flex-direction: column;
+  position: relative;
+/*   padding-top: 100px;
+  padding-bottom: 100px; */
+  margin: 100px 0;
+}
+
+.section-title{
+  margin: 0;
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: 600;
+  text-align: center;
+  width: 60%;
+  align-self: center;
+
+}
+
+.section-subtitle{
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+  text-align: center;
+  width: 60%;
+  align-self: center;
+  margin: 20px 0 0;
+}
+
+.table{
+  width: 1100px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-self: center;
+  list-style: none;
+}
+
+.table__cell{
+  width: 250px;
+  margin-top: 60px;
+}
+
+.table__heading{
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: 600;
+  margin: 0 0 20px;
+}
+
+.table__text{
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+  margin: 20px 0 0;
+}
+
+.feynman{
+  background-color: #f2f2f2;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  height: 890px;
+
+}
+
+.feynman__title{
+  line-height: 1.15;
+  font-size: 120px;
+  font-weight: 600;
+  margin: 100px 0 0;
+  width: 648px;
+  text-align: center;
+  align-self: center;
+  z-index: 2;
+}
+
+.feynman__subtitle{
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+  margin: 70px 0 0;
+  align-self: center;
+  z-index: 2;
+}
+
+.feynman__link{
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+  position: absolute;
+  text-decoration: none;
+  color: #2f80ed;
+  right: 48px;
+  top: 50%;
+  z-index: 2;
+}
+
+.feynman__background{
+  max-width: 765px;
+  min-height: 600px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  z-index: 1;
+}
+
+
+.kaufman{
+  background-color:#1f1f1f;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  padding-top: 90px;
+  padding-bottom: 90px;
+  overflow: hidden;
+}
+
+.section-title_theme_dark{
+  color: #ffffff;
+  margin: 0;
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: 600;
+  text-align: center;
+  width: 60%;
+  align-self: center;
+
+}
+
+.section-subtitle_theme_dark{
+  color: #ffffff;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+  text-align: center;
+  width: 60%;
+  align-self: center;
+  margin: 20px 0 0;
+}
+
+.table_theme_dark{
+  width: 1100px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-self: center;
+  z-index: 1;
+  list-style: none;
 }
 
 /* и элемента с модификатором вида ключ-значение */
@@ -29,3 +282,98 @@
   margin-right: 0;
   margin-top: 80px;
 }
+
+.table__heading_theme_dark{
+  color: white;
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: 600;
+  margin: 0 0 20px;
+}
+
+.table__text_theme_dark{
+  color: #ffffff;
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+  margin: 20px 0 0;
+}
+
+.kaufman__triangle{
+  width: 877px;
+  height: 877px;
+  position: absolute;
+  top: 0;
+  right: -210px;
+  z-index: 0;
+}
+
+.footer{
+  color: #ffffff;
+  position:relative;
+  display: flex;
+  min-height: 350px;
+  background-color: #1f1f1f;
+  justify-content: center;
+}
+
+.footer__columns{
+  width: 90%;
+  display: flex;
+  margin-top: 60px;
+  margin-bottom: 40px;
+  position: relative;
+  justify-content: space-between;
+  list-style: none;
+  padding: 0;
+}
+
+.footer__column_content_copyright{
+  flex-basis: 711px;
+}
+
+.footer__author{
+  position: absolute;    /* задаем позицию */
+  bottom: 0px;           /*приклеиваем к дну */
+  margin-top: 18px;      /* задаем отступ сверху */
+  margin-bottom: 18px;   /*задаем отступ снизу */
+}
+
+.footer__column_content_info{
+  position: relative;
+}
+
+.footer__column-heading{
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: 600;
+  position: relative;
+  margin: 0;
+}
+
+.footer__column-links{
+  margin-top: 20px;
+  margin-bottom: 16px;
+}
+
+.footer__column-link{
+  display: flex;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: normal;
+  text-decoration: none;
+  color: #ffffff;
+}
+
+.footer__column_content_social{
+  position: relative;
+}
+
+.footer__social-icon{
+  margin-right: 10px;
+  width: 16px;
+  height: 16px;
+  align-self: center;
+
+}
+
