--- a/styles/style.css
+++ b/styles/style.css
@@ -27,7 +27,7 @@
 }
 
 .header__title{
-  width: 730px;
+  max-width: 730px;
   align-self: center;
   margin: 0;
   margin-left: 64px;
@@ -38,7 +38,7 @@
 }
 
 .header__subtitle{
-  width: 388px;
+  max-width: 388px;
   position: absolute;
   bottom: 30px;
   left: 64px;
@@ -55,7 +55,7 @@
   color: #2f80ed;
 }
 
-.header__main-illustration{
+.header__main-illustration{  /*разобраться с object-fit*/
   max-width: 765px;
   min-height: 600px;
   position: absolute;
@@ -85,7 +85,7 @@
   width: 80%;
   display: flex;
   justify-content: space-between;
-  margin: 100px 0;
+  margin-top: 100px;
   list-style: none;
 
 }
@@ -118,7 +118,7 @@
   font-weight: 600;
 }
 
-.two-columns__paragraph_margin{
+.two-columns__paragraph:nth-of-type(2){
   margin-top: 30px;
   margin-bottom: 30px;
 }
@@ -127,8 +127,6 @@
   display: flex;
   flex-direction: column;
   position: relative;
-/*   padding-top: 100px;
-  padding-bottom: 100px; */
   margin: 100px 0;
 }
 
@@ -186,7 +184,7 @@
   display: flex;
   flex-direction: column;
   position: relative;
-  height: 890px;
+  min-height: 890px;
 
 }
 
@@ -223,8 +221,8 @@
 }
 
 .feynman__background{
-  max-width: 765px;
-  min-height: 600px;
+  max-width: 867px;
+  min-height: 637px;
   position: absolute;
   bottom: 0;
   left: 0;
@@ -240,9 +238,10 @@
   padding-top: 90px;
   padding-bottom: 90px;
   overflow: hidden;
+  z-index: -2;
 }
 
-.section-title_theme_dark{
+.kaufman__section-title_theme_dark{
   color: #ffffff;
   margin: 0;
   line-height: 1.15;
@@ -251,10 +250,11 @@
   text-align: center;
   width: 60%;
   align-self: center;
+  z-index: 1;
 
 }
 
-.section-subtitle_theme_dark{
+.kaufman__section-subtitle_theme_dark{
   color: #ffffff;
   line-height: 34px;
   font-size: 24px;
@@ -263,9 +263,10 @@
   width: 60%;
   align-self: center;
   margin: 20px 0 0;
+  z-index: 1;
 }
 
-.table_theme_dark{
+.kaufman__table_theme_dark{
   width: 1100px;
   display: flex;
   flex-wrap: wrap;
@@ -273,17 +274,18 @@
   align-self: center;
   z-index: 1;
   list-style: none;
+  z-index: 1;
 }
 
 /* и элемента с модификатором вида ключ-значение */
-.table__cell_theme_dark {
+.kaufman__table__cell_theme_dark {
   width: 200px;
   color: white;
   margin-right: 0;
   margin-top: 80px;
 }
 
-.table__heading_theme_dark{
+.kaufman__table__heading_theme_dark{
   color: white;
   line-height: 1.15;
   font-size: 24px;
@@ -291,7 +293,7 @@
   margin: 0 0 20px;
 }
 
-.table__text_theme_dark{
+.kaufman__table__text_theme_dark{
   color: #ffffff;
   line-height: 1.2;
   font-size: 18px;
