--- a/styles/style.css
+++ b/styles/style.css
@@ -138,6 +138,7 @@
   text-align: center;
   width: 60%;
   align-self: center;
+  z-index: 2;
 
 }
 
@@ -149,6 +150,7 @@
   width: 60%;
   align-self: center;
   margin: 20px 0 0;
+  z-index: 2  ;
 }
 
 .table{
@@ -158,11 +160,13 @@
   justify-content: space-between;
   align-self: center;
   list-style: none;
+  z-index: 2;
 }
 
 .table__cell{
   width: 250px;
   margin-top: 60px;
+  z-index: 2;
 }
 
 .table__heading{
@@ -170,6 +174,7 @@
   font-size: 24px;
   font-weight: 600;
   margin: 0 0 20px;
+  z-index: 2;
 }
 
 .table__text{
@@ -177,6 +182,7 @@
   font-size: 18px;
   font-weight: normal;
   margin: 20px 0 0;
+  z-index: 2;
 }
 
 .feynman{
@@ -241,20 +247,12 @@
   z-index: -2;
 }
 
-.kaufman__section-title_theme_dark{
+.section-title_theme_dark{
   color: #ffffff;
-  margin: 0;
-  line-height: 1.15;
-  font-size: 60px;
-  font-weight: 600;
-  text-align: center;
-  width: 60%;
-  align-self: center;
-  z-index: 1;
 
 }
 
-.kaufman__section-subtitle_theme_dark{
+.section-subtitle_theme_dark{
   color: #ffffff;
   line-height: 34px;
   font-size: 24px;
@@ -266,39 +264,22 @@
   z-index: 1;
 }
 
-.kaufman__table_theme_dark{
-  width: 1100px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-self: center;
-  z-index: 1;
-  list-style: none;
-  z-index: 1;
-}
 
 /* и элемента с модификатором вида ключ-значение */
-.kaufman__table__cell_theme_dark {
+.table__cell_theme_dark {
   width: 200px;
   color: white;
   margin-right: 0;
   margin-top: 80px;
 }
 
-.kaufman__table__heading_theme_dark{
+.table__heading_theme_dark{
   color: white;
   line-height: 1.15;
-  font-size: 24px;
-  font-weight: 600;
-  margin: 0 0 20px;
 }
 
 .kaufman__table__text_theme_dark{
   color: #ffffff;
-  line-height: 1.2;
-  font-size: 18px;
-  font-weight: normal;
-  margin: 20px 0 0;
 }
 
 .kaufman__triangle{
@@ -307,7 +288,7 @@
   position: absolute;
   top: 0;
   right: -210px;
-  z-index: 0;
+  z-index: 1;
 }
 
 .footer{
