--- a/styles/style.css
+++ b/styles/style.css
@@ -86,7 +86,6 @@
   display: flex;
   justify-content: space-between;
   margin-top: 100px;
-  list-style: none;
 
 }
 
@@ -160,6 +159,8 @@
   justify-content: space-between;
   align-self: center;
   list-style: none;
+  padding: 0;
+  margin: 0;
   z-index: 2;
 }
 
@@ -283,6 +284,7 @@
 }
 
 .kaufman__triangle{
+  background-image: url("/images/kaufman-triangle.svg");
   width: 877px;
   height: 877px;
   position: absolute;
@@ -300,43 +302,46 @@
   justify-content: center;
 }
 
+.footer__logo_place_footer{
+  max-width: 228px;
+}
+
 .footer__columns{
   width: 90%;
   display: flex;
   margin-top: 60px;
   margin-bottom: 40px;
-  position: relative;
   justify-content: space-between;
-  list-style: none;
   padding: 0;
 }
 
 .footer__column_content_copyright{
   flex-basis: 711px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
-.footer__author{
-  position: absolute;    /* задаем позицию */
-  bottom: 0px;           /*приклеиваем к дну */
-  margin-top: 18px;      /* задаем отступ сверху */
-  margin-bottom: 18px;   /*задаем отступ снизу */
+
+.footer__column_author{
+  margin-top: 18px;
+  margin-bottom: 18px;
 }
 
-.footer__column_content_info{
-  position: relative;
-}
-
-.footer__column-heading{
+.footer__column_column-heading{
   line-height: 30px;
   font-size: 18px;
   font-weight: 600;
-  position: relative;
   margin: 0;
 }
 
 .footer__column-links{
   margin-top: 20px;
   margin-bottom: 16px;
+  padding: 0;
+  margin-top: 20px;
+  margin-bottom: 16px;
+  list-style: none;
 }
 
 .footer__column-link{
@@ -346,10 +351,6 @@
   font-weight: normal;
   text-decoration: none;
   color: #ffffff;
-}
-
-.footer__column_content_social{
-  position: relative;
 }
 
 .footer__social-icon{
